infrastructure/kube/thesis-ops/heimdall-hubot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: heimdall-hubot-deployment
  labels:
    app: hubot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hubot
  template:
    metadata:
      labels:
        app: hubot
    spec:
      containers:
        - name: hubot
          # image: gcr.io/thesis-ops-2748/heimdall:USE_CIRCLE_CI_BUILDS
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.1"
