infrastructure/kube/thesis-ops/valkyrie-hubot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkyrie-hubot-deployment
  labels:
    app: hubot
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hubot
  template:
    metadata:
      labels:
        app: hubot
    spec:
      containers:
        - name: hubot
          #          image: gcr.io/thesis-ops-2748/valkyrie:571907d25da706484e12f7d8c40e03a9d82105a8
          ports:
            - containerPort: 8080
          resources:
            limits:
              cpu: "0.1"
